--- a/src/app/features/details/details.component.scss
+++ b/src/app/features/details/details.component.scss
@@ -8,7 +8,10 @@
     display: flex;
     flex-direction: column;
     color: #4A4A4A;
-    min-height: 100%;
+    min-height: calc(100vh - 64px);
+    @include small-screen {
+      min-height: calc(100vh - 56px);
+    }
 
     .main-container {
       display: flex;
